# regybox

./: .gitignore  .prettierignore  .pylintrc  .rumdl.toml  .yamllint.yml  AGENTS.md  BUILD  CHANGELOG.md  LICENSE  Makefile  README.md  action.yml  codecov.yml  mypy.ini  pants.toml  pyproject-pants.toml  pyproject.toml  ruff.toml  tombi.toml
.github/: dependabot.yml
.github/workflows/: calendar_sync.yml  class_operation.yml  dependabot_script.yml  scheduled_holiday_runs.yml  scheduled_runs.yml  tag_release.yml  test_run.yml  trunk-check.yaml  update-regybox-deployments.yml  validate_pr.yml  verify_pr_title.yml
.trunk/: trunk.yaml
cloudflare/regybox-scheduler/: .dev.vars.example  .regybox-deployment.json  package.json  worker.js  wrangler.jsonc
cloudflare/regybox-scheduler/.github/workflows/: regybox-automatic-updates.yml
cloudflare/regybox-scheduler/bench/: calendar-bench.mjs
cloudflare/regybox-scheduler/scripts/: render-wrangler-config.mjs  update-deployments.mjs  update-from-upstream.mjs
cloudflare/regybox-scheduler/src/: calendar.js  executor.js  failures.js  incidents.js  index.js  notify.js  regybox.js  runs.js  status.js
cloudflare/regybox-scheduler/test/: calendar-parity.test.js  classmap.test.js  executor.test.js  incidents.test.js  notify.test.js  regybox.test.js  render-wrangler-config.test.mjs  runs.test.js  status.test.js  update-deployments.test.mjs  update-from-upstream.test.mjs  worker.test.js
cloudflare/regybox-scheduler/test/fixtures/: not_yet_open.html  unlimited.html
docs/: legacy-setups.md
regibox/: BUILD  __main__.py  classes.py  connection.py  exceptions.py  regibox.py  singleton.py
regibox/utils/: time.py
regybox/: __main__.py  cal.py  calendar.py  classes.py  common.py  connection.py  exceptions.py  regybox.py
regybox/utils/: singleton.py  time.py
src/regybox/: __init__.py  __main__.py  cal.py  classes.py  cloudflare_kv.py  common.py  connection.py  exceptions.py  notifications.py  regybox.py  sync.py
src/regybox/utils/: __init__.py  singleton.py
tests/: BUILD  __init__.py  conftest.py  test_action_metadata.py  test_calendar.py  test_classes.py  test_cloudflare_kv.py  test_connection.py  test_exceptions.py  test_main.py  test_notifications.py  test_regibox.py  test_regybox.py  test_sync.py
tests/fixtures/: notification_contracts.json
tests/html_examples/: BUILD  closed_starting_soon.html  export.py  finished.html  full.html  in_progress.html  infinite_capacity.html  not_yet_open.html  open.html  overbooked.html  registered.html  registered_for_other.html  unenroll_closed.html  waitlisted.html
