[project]
name = "regybox"
version = "1.2.0"
description = "Automatically enroll in Regybox CrossFit classes"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [
  { name = "Martim Lobao", email = "m@rtimlobao.com" },
]
dependencies = [
  "beautifulsoup4>=4.13.4,<5.0.0",
  "ftfy>=6.3.1,<7.0.0",
  "icalendar>=6.3.1,<7.0.0",
  "python-dotenv>=1.1.1,<2.0.0",
  "recurring-ical-events>=3.8.0,<4.0.0",
  "requests>=2.32.4,<3.0.0",
  "urllib3>=2.5.0,<3.0.0",
]

[project.scripts]
list = "regybox.__main__:run_list"
regybox = "regybox.__main__:run"

[dependency-groups]
dev = [
  "bandit>=1.7.8",
  "coverage>=7.4.1",
  "docformatter>=1.7.5",
  "hypothesis>=6.97.3",
  "ipython>=8.20.0",
  "mypy>=1.8.0",
  "pylint>=3.0.3",
  "pytest>=9.0.0",
  "pytest-cov>=4.1.0",
  "pytest-env>=1.2.0",
  "ruff>=0",
  "types-beautifulsoup4>=4.12.0.5",
  "types-pytz>=2023.4.0.0",
  "types-requests>=2.31.0.1",
  "yamllint>=1.33.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.10.0"]
build-backend = "uv_build"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.docformatter]
recursive = true
style = "google"
wrap-descriptions = 80
wrap-summaries = 80

[tool.isort]
profile = "black"
line_length = 99

[tool.pytest]
addopts = ["--cov-fail-under=60", "--cov=src"]

[tool.pytest_env]
REGYBOX_USER = "test-user"
PHPSESSID = "test-session"
CALENDAR_URL = "https://calendar.local/regybox.ics"
