[project]
name = "regybox"
version = "2.4.0"
description = "Automatically enroll in Regybox CrossFit classes"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [
  { name = "Martim Lobao", email = "m@rtimlobao.com" },
]
dependencies = [
  "beautifulsoup4>=4.13.4,<5.0.0",
  "ftfy>=6.3.1,<7.0.0",
  "icalendar>=6.3.1,<8.0.0",
  "python-dotenv>=1.1.1,<2.0.0",
  "recurring-ical-events>=3.8.0,<4.0.0",
  "requests>=2.32.4,<3.0.0",
  "urllib3>=2.5.0,<3.0.0",
]

[project.scripts]
list = "regybox.__main__:run_list"
regybox = "regybox.__main__:run"

[dependency-groups]
dev = [
  "bandit>=1.8.6",
  "coverage>=7.10.6",
  "docformatter>=1.7.7",
  "hypothesis>=6.139.2",
  "ipython>=9.5.0",
  "pyright>=1.1.405",
  "pytest>=9.0.3",
  "pytest-cov>=7.0.0",
  "pytest-env>=1.2.0",
  "ruff>=0.15.10",
  "rumdl>=0.0.174",
  "tombi>=0.6.42",
  "ty>=0.0.31",
  "types-beautifulsoup4>=4.12.0.5",
  "types-icalendar>=6.3.2.20260408",
  "types-pytz>=2026.1.1.20260408",
  "types-requests>=2.33.0.20260408",
  "yamllint>=1.37.1",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.docformatter]
recursive = true
style = "google"
wrap-descriptions = 79
wrap-summaries = 79

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
executionEnvironments = [
  { root = "tests", reportPrivateUsage = false },
]

[tool.pytest]
addopts = ["--cov-fail-under=95", "--cov=src"]

[tool.pytest_env]
REGYBOX_USER = "test-user"
PHPSESSID = "test-session"
CALENDAR_URL = "https://calendar.local/regybox.ics"
