[project]
name = "regybox"
version = "2.4.0"
description = "Automatically enroll in Regybox CrossFit classes"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [
  { name = "Martim Lobao", email = "m@rtimlobao.com" },
]
dependencies = [
  "beautifulsoup4>=4.15.0,<5.0.0",
  "ftfy>=6.3.1,<7.0.0",
  "icalendar>=7.2.0,<8.0.0",
  "python-dotenv>=1.1.1,<2.0.0",
  "recurring-ical-events>=3.8.2,<4.0.0",
  "requests>=2.34.2,<3.0.0",
  "urllib3>=2.7.0,<3.0.0",
]

[project.scripts]
list = "regybox.__main__:run_list"
regybox = "regybox.__main__:run"

[dependency-groups]
dev = [
  "bandit>=1.8.6",
  "coverage>=7.14.1",
  "docformatter>=1.7.8",
  "hypothesis>=6.156.6",
  "ipython>=9.15.0",
  "pyright>=1.1.410",
  "pytest>=9.1.1",
  "pytest-cov>=7.0.0",
  "pytest-env>=1.2.0",
  "ruff>=0.15.21",
  "rumdl>=0.2.28",
  "tombi>=1.2.0",
  "ty>=0.0.56",
  "types-beautifulsoup4>=4.12.0.5",
  "types-icalendar>=6.3.2.20260518",
  "types-pytz>=2026.2.0.20260518",
  "types-requests>=2.33.0.20260712",
  "yamllint>=1.37.1",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.docformatter]
recursive = true
style = "google"
wrap-descriptions = 79
wrap-summaries = 79

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
executionEnvironments = [
  { root = "tests", reportPrivateUsage = false },
]

[tool.pytest]
addopts = ["--cov-fail-under=95", "--cov=src"]

[tool.pytest_env]
REGYBOX_USER = "test-user"
PHPSESSID = "test-session"
CALENDAR_URL = "https://calendar.local/regybox.ics"
